@@ -8,6 +8,10 @@ debhelper (11.2.2) UNRELEASED; urgency=medium
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
     cross-compilation.  (Closes: #895286)
 
+  [ Helmut Grohne ]
+  * cmake: Pass CC/CXX environment variables down during native
+    compilation as well. (Closes: #-1)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000
 
 debhelper (11.2.1) unstable; urgency=medium
